--- a/RmarkdownFinalProject.html
+++ b/RmarkdownFinalProject.html
@@ -355,7 +355,12 @@ display: none;
 </div>
 
 
-
+<pre class="r"><code>drug_df %&gt;% 
+  select(ILLFLAG) %&gt;% 
+  table()</code></pre>
+<pre><code>## ILLFLAG
+##     0     1 
+## 28690 28015</code></pre>
 
 
 
