--- a/RmarkdownFinalProject.html
+++ b/RmarkdownFinalProject.html
@@ -769,9 +769,9 @@ height: 0px !important;
 <td headers="Percentage of individuals" class="gt_row gt_right">50.60%</td></tr>
     <tr><td headers="When used illicit drugs" class="gt_row gt_left">Used</td>
 <td headers="Percentage of individuals" class="gt_row gt_right">49.40%</td></tr>
-    <tr><td headers="When used illicit drugs" class="gt_row gt_left">Used in last year</td>
+    <tr><td headers="When used illicit drugs" class="gt_row gt_left">Used in past year</td>
 <td headers="Percentage of individuals" class="gt_row gt_right">28.29%</td></tr>
-    <tr><td headers="When used illicit drugs" class="gt_row gt_left">Used in last month</td>
+    <tr><td headers="When used illicit drugs" class="gt_row gt_left">Used in past month</td>
 <td headers="Percentage of individuals" class="gt_row gt_right">18.73%</td></tr>
   </tbody>
   <tfoot class="gt_sourcenotes">
